# movie-linker

./: README.md
client/: package-lock.json  package.json  readme_logan.md  svelte.config.js  tailwind.config.ts
client/src/: app.css
client/src/lib/components/: SixDegreeScreen.svelte
client/src/lib/components/SixDegrees/: Home.svelte  Home2.svelte
client/src/lib/components/Visualization/: LinkedList.svelte  LinkedTypes.ts
client/src/lib/components/Visualization/molecules/: Arrow.svelte  MovieCard.svelte
client/src/routes/: +layout.svelte  +page.svelte  node.svelte  path.svelte  temp
client/src/routes/benchmark/: +page.svelte
server/: .gitattributes  .gitignore  Cargo.toml
server/scripts/: .~lock.moviedata.csv#  parse.py
server/src/: .~lock.moviedata.csv#  .~lock.moviedatanew.csv#  graph.rs  graphfile  main.rs  moviedatanew.csv  movieparser.rs
