[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9" }
csv = "1.3.1"
dashmap = "6.1.0"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"]}
tower-http = { version = "0.6.2", features = ["cors"]}
